
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_PACKET ;
 int EXIT_FAILURE ;
 int IPPROTO_RAW ;
 int SOCK_RAW ;
 int dprintf (char*) ;
 int exit (int ) ;
 int packet_socket_send (int,char*,int) ;
 int socket (int ,int ,int ) ;

void loopback_send(char *buffer, int size) {
 int s = socket(AF_PACKET, SOCK_RAW, IPPROTO_RAW);
 if (s == -1) {
  dprintf("[-] socket(SOCK_RAW)\n");
  exit(EXIT_FAILURE);
 }

 packet_socket_send(s, buffer, size);
}
